syntax = "proto3";

option java_multiple_files = true;
package sso;

service SSO {
    rpc SignIn(SignInRequest) returns (SignInResponse) {}
    rpc SignUp(SignUpRequest) returns (SignUpResponse) {}
    rpc Check(CheckRequest) returns (CheckResponse) {}
    rpc HasUser(HasUserRequest) returns (HasUserResponse) {}
    rpc UpdatePassword(UpdateRequest) returns (UpdateResponse) {}
    rpc UpdateUsername(UpdateRequest) returns (UpdateResponse) {}
    rpc Logout(LogoutRequest) returns (LogoutResponse) {}
    rpc LogoutAll(LogoutRequest) returns (LogoutResponse) {}
    rpc GetUserUUIDByName(GetUserUUIDByNameRequest) returns (GetUserUUIDByNameResponse) {}
    // rpc GetUserData(GetUserDataRequest) returns (GetUserDataResponse) {}
}

message SignInRequest {
    string username = 1;
    string password = 2;
}

message SignUpRequest {
    string username = 1;
    string password = 2;
}

message CheckRequest {
    string token = 1;
}

message StatusResponse {
    uint32 status = 1;
}

message HasUserRequest {
    string username = 1;
}

message UpdateRequest {
    string targetUuid = 1;
    string newValue = 2;
}

message LogoutRequest {
    string token = 1;
}

message GetUserUUIDByNameRequest {
    string username = 1;
}

message SignUpResponse {
    StatusResponse respStatus = 1;
    string token = 2;
}

message SignInResponse {
    StatusResponse respStatus = 1;
    string token = 2;
}

message TokenPayload {
    string uuid = 1;
    string username = 2;
}

message CheckResponse {
    StatusResponse respStatus = 1;
    bool isValidSession = 2;
    TokenPayload payload = 3;
}

message HasUserResponse {
    StatusResponse respStatus = 1;
    bool hasUser = 2;
}

message UpdateResponse {
    StatusResponse respStatus = 1;
}

message LogoutResponse {
    StatusResponse respStatus = 1;
}

message GetUserUUIDByNameResponse {
    StatusResponse respStatus = 1;
    string userUuid = 2;
}
